nautilus/deployment/desktop.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daksh-asl-desktop # Change this to your initials
  namespace: autoslug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daksh-asl-desktop # Change this to your initials
  template:
    metadata:
      labels:
        app: daksh-asl-desktop # Change this to your initials
    spec:
      hostname: daksh-asl-desktop # Change this to your initials
      securityContext: # Pod-level security context (optional)
        runAsUser: 1000 # UID for the user
        runAsGroup: 1000 # GID for the group
        fsGroup: 1000 # Ensure mounted volumes have the correct group permissions
      containers:
      - name: daksh-asl-desktop # Change this to your initials
        image: ghcr.io/selkies-project/nvidia-glx-desktop:22.04-20240815104538 # If you face compatibility issues, replace "latest" with "22.04-20240815104538" or any other tag found here https://github.com/selkies-project/docker-nvidia-glx-desktop/pkgs/container/nvidia-glx-desktop
        stdin: true
        tty: true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 32Gi
            cpu: "6"
            nvidia.com/gpu: "1"
            ephemeral-storage: 70Gi
          requests:
            memory: 32Gi
            cpu: "6"
            nvidia.com/gpu: "1"
            ephemeral-storage: 70Gi
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /cache
          name: cache-vol
        - mountPath: /home/ubuntu/persistent
          name: root-vol
        - mountPath: /home/ubuntu/asl/data
          name: asl-data
        - mountPath: /home/ubuntu/asl/persistent
          name: asl-perst
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      - name: cache-vol
        persistentVolumeClaim:
          claimName: desktop-cache # Change this to your initials
      - name: root-vol
        persistentVolumeClaim:
          claimName: aria-persistent # Change this to your initials
      - name: asl-data
        persistentVolumeClaim:
          claimName: asl-dataset
      - name: asl-perst
        persistentVolumeClaim:
          claimName: asl-persistent
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: NotIn
                values:
                - ucsd-suncave
              - key: nvidia.com/gpu.product
                operator: In
                values:
                - NVIDIA-GeForce-RTX-3090
                - NVIDIA-A10
                - NVIDIA-GeForce-RTX-4090
                - NVIDIA-TITAN-RTX
                - NVIDIA-RTX-A5000
                - NVIDIA-A40
                - NVIDIA-L40
                - NVIDIA-RTX-A6000
                - Quadro-RTX-8000
                - NVIDIA-A100-SXM4-80GB
                - Tesla-V100-SXM2-32GB
